version 0.16  * McCabes totem is now recognised as such  * After opening a model, you can close it with the back-button  * M3E Print health background is now white instead of transparent. So tall pictures will no longer be visible behind Health.  * Added Health as a quick show option  * Df quick show now shown as Df instead of Mv

--- a/src/styles/print_m3e.css
+++ b/src/styles/print_m3e.css
@@ -238,6 +238,7 @@
   left:0;
   right:0;
   height: 9.6mm;
+  background: #fff none;
 }
 
 .m3e .front .health .wounds {
